--- a/index.html
+++ b/index.html
@@ -6,43 +6,33 @@
   <title>Pinch Runners</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <script src="dep/jquery-3.5.1.min.js"></script>
   <link rel="stylesheet" href="dep/bootstrap.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/evergreen.css">
   <script src="dep/popper.min.js"></script>
+  <script src="dep/jquery-3.5.1.min.js"></script>
   <script src="dep/bootstrap.min.js"></script>
-
-  <link rel="stylesheet" href="dep/leaflet.css" />
-  <script src="dep/feather.min.js"></script>
+  <script src="js/elements.js"></script>
   <script src="js/code.js"></script>
+  <script src="js/utils.js"></script>
 </head>
 
-<div class="container-fluid h-100">
-  <div class="row justify-content-center h-100">
-    <div class="col-12 bg-red">
-      <div class="h-100 d-flex flex-column">
-        <div class="row justify-content-left bg-gray">
-          <div class="col-md-12 col-lg-8 p-0">
-            <div class="collapse" id="navbarToggleExternalContent">
-              <div class="bg-dark p-4 m-0 container">
-              </div>
-            </div>
-            <nav class="navbar navbar-dark">
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <span class="app-title">
-                Pinch Runners - April Challenge
-              </span>
-            </nav>
-          </div>
-        </div>
-        <div class="row justify-content-center bg-blue flex-grow-1">
-        </div>
-
-      </div>
+<body>
+  <div class="row">
+    <div class="col-md-5">
+      <img class="rounded mx-auto d-block" alt="Evergreen Challenge" src="img/rainier.png">
+    </div>
+    <div class="col-md-7">
+      <h2>April Challenge</h2>
+      <p>Pinch Runners Progress</p>
+      <a href="https://docs.google.com/spreadsheets/d/1tU3qY3sGw-D4hWGDx-eSQy2-Mn9rXPO55iXp9aITcwQ/edit?usp=sharing">Enter Your Data</a>
     </div>
   </div>
-</div>
+  <hr>
+
+  <div class="container bars">
+
+  </div>
+
+</body>
 
 </html>
