--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <script src="dep/popper.min.js"></script>
   <script src="dep/jquery-3.5.1.min.js"></script>
   <script src="dep/bootstrap.min.js"></script>
+  <script src="dep/Chart.min.js"></script>
   <script src="js/elements.js"></script>
   <script src="js/code.js"></script>
   <script src="js/utils.js"></script>
@@ -29,9 +30,22 @@
   </div>
   <hr>
 
-  <div class="container bars">
+  <div class="container bars">  </div>
 
+  <br />
+  <br />
+  <h2 style="text-align: center">Climb your Mountain!</h2>
+
+  <div class="row chart-row">
+    <div class="chart-container" style="position: relative; height:80vh; width:80vw">
+      <canvas id="myChart" width="100" height="100"></canvas>
+    </div>
   </div>
+
+  <br />
+  <br />
+
+
 
 </body>
 
