--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <script src="dep/jquery-3.5.1.min.js"></script>
   <script src="dep/bootstrap.min.js"></script>
   <script src="dep/Chart.min.js"></script>
-  <script src="js/elements.js"></script>
+  <script src="js/progress-bars.js"></script>
+  <script src="js/fun-chart.js"></script>
   <script src="js/code.js"></script>
-  <script src="js/utils.js"></script>
 </head>
 
 <body>
