Add a refresh button that refreshes the page.

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
       <h2>April Challenge</h2>
       <p>Pinch Runners Progress</p>
       <a href="https://docs.google.com/spreadsheets/d/1tU3qY3sGw-D4hWGDx-eSQy2-Mn9rXPO55iXp9aITcwQ/edit?usp=sharing">Enter Your Data</a>
+      <br /><br />
+      <a id="refresh-button" href="#" class="disabled" onclick="getData(true);">Refresh Data</a>
     </div>
   </div>
   <hr>
 
-  <div class="container bars">  </div>
+  <div class="container bars"> </div>
 
   <br />
   <br />
