--- a/index.html
+++ b/index.html
@@ -15,40 +15,77 @@
   <script src="js/progress-bars.js"></script>
   <script src="js/fun-chart.js"></script>
   <script src="js/code.js"></script>
+  <script src="dep/feather.min.js"></script>
+
 </head>
 
 <body>
-  <div class="row">
-    <div class="col-md-5">
-      <img class="rounded mx-auto d-block" alt="Evergreen Challenge" src="img/rainier.png">
+  <div class="not-footer">
+    <div class="row">
+      <div class="col-md-5">
+        <img class="rounded mx-auto d-block" alt="Evergreen Challenge" src="img/rainier.png">
+      </div>
+      <div class="col-md-7">
+        <h2>April Challenge</h2>
+        <p>Pinch Runners Progress</p>
+        <a href="https://docs.google.com/spreadsheets/d/1tU3qY3sGw-D4hWGDx-eSQy2-Mn9rXPO55iXp9aITcwQ/edit?usp=sharing"><i data-feather="edit"></i><span>Enter Data</span></a>
+        <br /><br />
+        <a id="refresh-button" href="#" class="disabled" onclick="getData(true);"><i data-feather="refresh-cw"></i><span>Refresh Data</span></a>
+        <div id="version-updates">
+          <hr>
+          <h4>NEW FEATURE ALERT!</h4>
+          <p>Downloading data from google sheets is slow so now all data is cached for 1 hour by default.
+            If you're not seeing your recent changes, you can click the 'Refresh Data' button above to force an update.
+            Happy Running!
+          </p>
+        </div>
+      </div>
     </div>
-    <div class="col-md-7">
-      <h2>April Challenge</h2>
-      <p>Pinch Runners Progress</p>
-      <a href="https://docs.google.com/spreadsheets/d/1tU3qY3sGw-D4hWGDx-eSQy2-Mn9rXPO55iXp9aITcwQ/edit?usp=sharing">Enter Your Data</a>
-      <br /><br />
-      <a id="refresh-button" href="#" class="disabled" onclick="getData(true);">Refresh Data</a>
+    <hr>
+
+    <div class="container bars"> </div>
+
+    <br />
+    <br />
+    <h2 style="text-align: center">Climb your Mountain!</h2>
+
+    <div class="row chart-row">
+      <div class="chart-container" style="position: relative; height:80vh; width:80vw">
+        <canvas id="myChart" width="100" height="100"></canvas>
+      </div>
     </div>
+
+    <br />
+    <br />
   </div>
-  <hr>
+  <footer class="bg-dark text-center text-white">
+    <!-- Grid container -->
+    <div class="container p-4 pb-0">
+      <!-- Section: Social media -->
+      <section>
 
-  <div class="container bars"> </div>
+        <!-- Twitter -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/mattghall" role="button"><i data-feather="twitter"></i></a>
 
-  <br />
-  <br />
-  <h2 style="text-align: center">Climb your Mountain!</h2>
+        <!-- Instagram -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/matghall" role="button"><i data-feather="instagram"></i></a>
 
-  <div class="row chart-row">
-    <div class="chart-container" style="position: relative; height:80vh; width:80vw">
-      <canvas id="myChart" width="100" height="100"></canvas>
+        <!-- Linkedin -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://linkedin.com/in/mattghall/" role="button"><i data-feather="linkedin"></i></a>
+
+        <!-- Github -->
+        <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/mattghall" role="button"><i data-feather="github"></i></a>
+      </section>
+      <!-- Section: Social media -->
     </div>
-  </div>
+    <!-- Grid container -->
 
-  <br />
-  <br />
-
-
-
+    <!-- Copyright -->
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      tcx-editor.mattghall.com - <span id="version-span">unknown version</span>
+    </div>
+    <!-- Copyright -->
+  </footer>
 </body>
 
 </html>
