--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/mattghall" role="button"><i data-feather="twitter"></i></a>
 
         <!-- Instagram -->
-        <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/matghall" role="button"><i data-feather="instagram"></i></a>
+        <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/mattghall" role="button"><i data-feather="instagram"></i></a>
 
         <!-- Linkedin -->
         <a class="btn btn-outline-light btn-floating m-1" href="https://linkedin.com/in/mattghall/" role="button"><i data-feather="linkedin"></i></a>
@@ -82,7 +82,7 @@
 
     <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      tcx-editor.mattghall.com - <span id="version-span">unknown version</span>
+      tcx-editor.mattghall.com - <span class="version-span">unknown version</span>
     </div>
     <!-- Copyright -->
   </footer>
