--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-  <div class="not-footer">
+  <div class="not-footer p-3 px-sm-5">
     <div class="row">
       <div class="col-md-5">
         <img class="rounded mx-auto d-block" alt="Evergreen Challenge" src="img/rainier.png">
@@ -49,14 +49,21 @@
     <br />
     <h2 style="text-align: center">Climb your Mountain!</h2>
 
-    <div class="row chart-row">
-      <div class="chart-container" style="position: relative; height:80vh; width:80vw">
-        <canvas id="myChart" width="100" height="100"></canvas>
+    <div class="row">
+      <div class="col-12 col-lg-9 px-0 px-sm-5">
+        <div class="chart-container" style="position: relative; height:80vh;">
+          <canvas id="myChart" width="100" height="100"></canvas>
+        </div>
       </div>
-    </div>
+      <div class="col-12 col-lg-3">
+        <div class="row legend">
 
-    <br />
-    <br />
+        </div>
+      </div>
+
+      <br />
+      <br />
+    </div>
   </div>
   <footer class="bg-dark text-center text-white">
     <!-- Grid container -->
