Re-arrange graph and progress bars

--- a/index.html
+++ b/index.html
@@ -43,10 +43,6 @@
     </div>
     <hr>
 
-    <div class="container bars"> </div>
-
-    <br />
-    <br />
     <h2 style="text-align: center">Climb your Mountain!</h2>
 
     <div class="row">
@@ -57,41 +53,25 @@
       </div>
       <div class="col-12 col-lg-3">
         <div class="row legend">
-
         </div>
       </div>
-
-      <br />
-      <br />
+      <div class="container bars my-3"> </div>
     </div>
   </div>
+
+
   <footer class="bg-dark text-center text-white">
-    <!-- Grid container -->
     <div class="container p-4 pb-0">
-      <!-- Section: Social media -->
       <section>
-
-        <!-- Twitter -->
         <a class="btn btn-outline-light btn-floating m-1" href="https://twitter.com/mattghall" role="button"><i data-feather="twitter"></i></a>
-
-        <!-- Instagram -->
         <a class="btn btn-outline-light btn-floating m-1" href="https://instagram.com/mattghall" role="button"><i data-feather="instagram"></i></a>
-
-        <!-- Linkedin -->
         <a class="btn btn-outline-light btn-floating m-1" href="https://linkedin.com/in/mattghall/" role="button"><i data-feather="linkedin"></i></a>
-
-        <!-- Github -->
         <a class="btn btn-outline-light btn-floating m-1" href="https://github.com/mattghall" role="button"><i data-feather="github"></i></a>
       </section>
-      <!-- Section: Social media -->
     </div>
-    <!-- Grid container -->
-
-    <!-- Copyright -->
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       tcx-editor.mattghall.com - <span class="version-span">unknown version</span>
     </div>
-    <!-- Copyright -->
   </footer>
 </body>
 
