--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
           <h4>NEW FEATURE ALERT!</h4>
           <p>Downloading data from google sheets is slow so now all data is cached for 1 hour by default.
             If you're not seeing your recent changes, you can click the 'Refresh Data' button above to force an update.
+            I also adding a loading gif so you know something's going on.
             Happy Running!
           </p>
         </div>
@@ -43,20 +44,29 @@
     </div>
     <hr>
 
-    <h2 style="text-align: center">Climb your Mountain!</h2>
-
-    <div class="row">
-      <div class="col-12 col-lg-9 px-0 px-sm-5">
-        <div class="chart-container" style="position: relative; height:80vh;">
-          <canvas id="myChart" width="100" height="100"></canvas>
-        </div>
-      </div>
-      <div class="col-12 col-lg-3">
-        <div class="row legend">
-        </div>
-      </div>
-      <div class="container bars my-3"> </div>
+    <div id="spinner" class="text-center">
+      <div class="spinner-grow text-info" role="status" style="height: 15rem; width: 15rem;">
+      <span class="d-none">Loading...</span>
     </div>
+    </div>
+
+    <div id="notSpinner">
+      <h2 style="text-align: center">Climb your Mountain!</h2>
+
+      <div class="row">
+        <div class="col-12 col-lg-9 px-0 px-sm-5">
+          <div class="chart-container" style="position: relative; height:80vh;">
+            <canvas id="myChart" width="100" height="100"></canvas>
+          </div>
+        </div>
+        <div class="col-12 col-lg-3">
+          <div class="row legend">
+          </div>
+        </div>
+        <div class="container bars my-3"> </div>
+      </div>
+    </div>
+
   </div>
 
 
