Fix version and non-runner bug

--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
             <h2>April Challenge</h2>
           </div>
           <div class="col-12 text-center text-md-left">
-            <p>Pick your mountain and track your progress throughout the month!</p>
+            <p>Pick your mountain and track your progress throughout the month! Run, walk, climb, crawl, and kayak your way to the top!
+            Is biking more your fancy? Select 'bike' in the spreadsheet for special bike only features.</p>
           </div>
           <div class="col-6 col-md-12 text-center text-md-left">
             <a href="https://docs.google.com/spreadsheets/d/1tU3qY3sGw-D4hWGDx-eSQy2-Mn9rXPO55iXp9aITcwQ/edit?usp=sharing"><i data-feather="edit"></i><span>Enter Data</span></a>
@@ -39,12 +40,12 @@
           <div class="col-6 col-md-12 text-center text-md-left">
             <a id="refresh-button" href="#" class="disabled" onclick="getData(true);"><i data-feather="refresh-cw"></i><span>Refresh Data</span></a>
           </div>
-          <div class="col-12">
+          <div class="col-12 text-center text-md-left">
             <div id="version-updates">
               <hr>
               <h4>NEW FEATURE ALERT!</h4>
               <p>The graph now has multple axis to choose from! Try them all to find your favorite.
-                Happy Running!
+                Happy Running, Biking, and Kayaking!
               </p>
             </div>
           </div>
