--- a/index.html
+++ b/index.html
@@ -7,14 +7,15 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="dep/bootstrap.min.css">
-  <link rel="stylesheet" href="css/evergreen.css">
+  <link rel="stylesheet" href="css/style.1.5.css">
+
   <script src="dep/popper.min.js"></script>
   <script src="dep/jquery-3.5.1.min.js"></script>
   <script src="dep/bootstrap.min.js"></script>
   <script src="dep/Chart.min.js"></script>
   <script src="js/progress-bars.js"></script>
   <script src="js/fun-chart.js"></script>
-  <script src="js/code.js"></script>
+  <script src="js/code.1.5.js"></script>
   <script src="dep/feather.min.js"></script>
 
 </head>
