--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <script src="dep/bootstrap.min.js"></script>
   <script src="dep/Chart.min.js"></script>
   <script src="js/progress-bars.js"></script>
-  <script src="js/fun-chart.js"></script>
+  <script src="js/fun-chart.1.5.js"></script>
   <script src="js/code.1.5.js"></script>
   <script src="dep/feather.min.js"></script>
 
@@ -111,7 +111,7 @@
       </section>
     </div>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      tcx-editor.mattghall.com - <span class="version-span">unknown version</span>
+      pinch-runners.mattghall.com - <span class="version-span">unknown version</span>
     </div>
   </footer>
 </body>
