Add Finish Line

--- a/index.html
+++ b/index.html
@@ -13,9 +13,10 @@
   <script src="dep/jquery-3.5.1.min.js"></script>
   <script src="dep/bootstrap.min.js"></script>
   <script src="dep/Chart.min.js"></script>
+  <script src="dep/chartjs-plugin-annotation.min.js"></script>
   <script src="js/progress-bars.js"></script>
-  <script src="js/fun-chart.1.5.js"></script>
-  <script src="js/code.1.5.js"></script>
+  <script src="js/fun-chart.1.6.js"></script>
+  <script src="js/code.1.5.4.js"></script>
   <script src="dep/feather.min.js"></script>
 
 </head>
